# rnnoise

./: .gitignore  CMakeLists.txt  TRAINING-README  requirements.txt
include/: rnnoise.h
src/: denoise.c  rnn.c
training/: audio_preprocessing.py  default_model.txt  rnn_reader.py  rnn_train.py  vad_training_data_label_studio_to_audacity.py
